Multiobject Edit UV constraint to image bounds behaviour it´s broken #66627

Closed
opened 2019-07-09 22:24:52 +02:00 by Jordi · 4 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.81

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: 699193713f
Worked: (optional)

Short description of error
Multiobject Edit UV constraint to image bounds behaviour it´s broken

Exact steps for others to reproduce the error
Activate the option in UV editor to constraint to image bounds.
You have to try to move/scale/rotate ALL the islands you have ( from multiobject edit UVs ) at once to see the bug.
If your islands are from multiobject editing, the behaviour it´s unpredictable.
Works fine with single object uvs or one island at a time.

Multiobject_Edit_UV_Constraint_to_image_bounds.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.81 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: `699193713f` Worked: (optional) **Short description of error** Multiobject Edit UV constraint to image bounds behaviour it´s broken **Exact steps for others to reproduce the error** Activate the option in UV editor to constraint to image bounds. You have to try to move/scale/rotate ALL the islands you have ( from multiobject edit UVs ) at once to see the bug. If your islands are from multiobject editing, the behaviour it´s unpredictable. Works fine with single object uvs or one island at a time. [Multiobject_Edit_UV_Constraint_to_image_bounds.blend](https://archive.blender.org/developer/F7579862/Multiobject_Edit_UV_Constraint_to_image_bounds.blend)
Author

Added subscriber: @JVM

Added subscriber: @JVM
Author

You have to try to move/scale/rotate ALL the islands you have ( from multiobject edit UVs ) at once to see the bug

You have to try to move/scale/rotate ALL the islands you have ( from multiobject edit UVs ) at once to see the bug
Dalai Felinto self-assigned this 2019-07-10 00:19:07 +02:00

This issue was referenced by fde88ad9d2

This issue was referenced by fde88ad9d2fc93caa6c3cc39d4c009a0c9bac7c5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66627
No description provided.