Fix T66627: Multiobject Edit UV constraint to image bounds

This was broken since the original commit to handle multi-object
editing: rBbfc9d426bb95.